--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -107,7 +107,7 @@ header {
       width: 8px;
       height: 8px;
       display: inline-block;
-      position:absolute;
+      position: absolute;
       bottom: 4px;
       right: 8px;
       border-radius: 50%;
@@ -179,15 +179,26 @@ header {
     position: relative;
     display: inline-block;
 
-    .badge {
-      position: absolute;
-      bottom: 0px;
-      left: 0px;
-      background-color: #666;
-      padding: 5px;
+    img {
+      border: 6px solid #e0e1e1;
+    }
 
-      span {
-        color: white;
+    .statistics {
+      background-color: #e0e1e1;
+      font-size: 0.8rem;
+
+      .count {
+        padding-left: 1.4rem;
+        background-position: left;
+        background-repeat: no-repeat;
+      }
+
+      .likes {
+        background-image: url(/images/icons/heart.svg);
+      }
+
+      .reposts {
+        background-image: url(/images/icons/repost.svg);
       }
     }
   }
@@ -400,8 +411,8 @@ header {
 .playable {
   &-button {
     position: absolute;
-    top: 6px;
-    left: 8px;
+    top: 10px;
+    left: 12px;
     align-self: center;
 
     span {
@@ -537,53 +548,6 @@ header {
   }
 }
 
-.likes {
-  position: absolute;
-  top: 16px;
-  right: 8px;
-
-  .count {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: 0.9rem;
-    font-weight: bold;
-  }
-
-  .heart {
-    background-color: #E85C41;
-    display: inline-block;
-    height: 20px;
-    margin: 0 5px;
-    position: relative;
-    top: 0;
-    transform: rotate(-45deg);
-    width: 20px;
-  }
-
-  .heart:before,
-  .heart:after {
-    content: "";
-    background-color: #E85C41;
-    border-radius: 50%;
-    height: 20px;
-    position: absolute;
-    width: 20px;
-  }
-
-  .heart:before {
-    top: -8px;
-    left: 0;
-  }
-
-  .heart:after {
-    left: 8px;
-    top: 0;
-  }
-}
-
 .toggle-link {
   position: relative;
   padding-left: 1.2rem;
@@ -615,67 +579,5 @@ header {
     border-right: 7px solid transparent;
 
     border-bottom: 7px solid #e0e1e1;
-  }
-}
-
-.pulsating-circle {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  width: 10px;
-  height: 10px;
-
-  &:before {
-    content: '';
-    position: relative;
-    display: block;
-    width: 300%;
-    height: 300%;
-    box-sizing: border-box;
-    margin-left: -100%;
-    margin-top: -100%;
-    border-radius: 20px;
-    background-color: #f1f1f1;
-    animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
-    animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -.4s infinite;
-  }
-}
-
-@keyframes pulse-ring {
-  0% {
-    transform: scale(.33);
-  }
-
-  80%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes pulse-dot {
-  0% {
-    transform: scale(.8);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(.8);
   }
 }
