--- a/src/views/partials/episode/_default.njk
+++ b/src/views/partials/episode/_default.njk
@@ -11,7 +11,7 @@
         </span>
       </div>
 
-      <div class="d-flex statistics p-2">
+      <div class="d-flex statistics p-2 pb-0">
         <div class="flex-grow-1">
           <span>{{ timeToMinutes(item.audio_length) }} min</span>
         </div>
