--- a/src/views/show.njk
+++ b/src/views/show.njk
@@ -1,43 +1,8 @@
 {% extends "layout.njk" %}
 
-{% block header %}
-
-  {% include "partials/filters/_tag.njk" %}
-
-  <div class="container-fluid content-header" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
-
-    <div class="collapse" id="filter-controls" data-filters-target="panel">
-      <div class="filters">
-        <div class="d-md-flex flex-row">
-          <div class="filters-header">
-
-            <ul class="nav nav-fill" data-filters-target="nav"></ul>
-
-            <div class="groups">
-              <ul data-filters-target="groups"></ul>
-            </div>
-
-            <div class="selected" data-filters-target="selected">
-              <p class="filters-selected--none">No preferences selected</p>
-
-              <div class="d-flex">
-                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-{% endblock %}
-
 {% block content %}
   <div data-show-id-value="{{ item.id }}">
     <div class="container-fluid">
-      {# <h5>&gt;&gt;&gt; Click play icon above to start stream</h5>
-      <p class="lead mt-3 mb-4">Musical selections and discovery streamed for enlightened listening.</p> #}
-
       <div class="row episodes pb-4">
         <div class="col-12 col-md-6 card episode">
           <h3 class="mb-3">{{ item.title }}</h3>
@@ -55,15 +20,10 @@
       </div>
     </div>
 
-    <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination" data-episodes-items-value="12" data-episodes-query-value="{{ item.title }}" data-episodes-types-value="true" data-episodes-search-value="true">
+    <div id="episodes" data-action="episodes:paginate->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination" data-episodes-items-value="12" data-episodes-query-value="{{ item.title }}" data-episodes-types-value="true" data-episodes-search-value="true">
       <div class="container-fluid pb-2">
-        <div class="heading d-flex" data-episodes-target="heading">
-          {% include "templates/episodes/_title.njk" %}
-        </div>
-        <div class="pagination d-flex flex-wrap flex-md-nowrap">
-          <div data-pagination-target="stats" class="flex-grow-1"></div>
-          <div data-pagination-target="control" data-action="click->pagination#paginate"></div>
-        </div>
+        {% include "partials/list/_pagination.njk" %}
+
         <div class="row episodes" data-episodes-target="items"></div>
         <a class="nav-link" href="/shows" data-controller="navigation" data-action="click->navigation#navigate">Back to all shows</a>
       </div>
@@ -73,7 +33,7 @@
       <h2>Relevant Reading</h2>
       {% set query = [item.id, item.tags] | join(",") %}
       <div class="row episodes pb-4" data-controller="posts" data-posts-target="items" data-posts-overidden-value="true" data-posts-show-item-template-id="post" data-posts-offset-value="0" data-posts-items-value="12" data-posts-query-value="{{ query }}" data-posts-search-value="true">
-        {% include "templates/_post.njk" %}
+        <div data-posts-target="items"></div>
       </div>
     </div>
   </div>
