--- a/src/views/browse.njk
+++ b/src/views/browse.njk
@@ -1,59 +1,20 @@
 {% extends "layout.njk" %}
 
-{% block header %}
-  {% include "partials/filters/_tag.njk" %}
-
-  <div class="container-fluid content-header" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
-
-    <div class="collapse" id="filter-controls" data-filters-target="panel">
-      <div class="filters">
-        <div class="d-md-flex flex-row">
-          <div class="filters-header">
-
-            <ul class="nav nav-fill" data-filters-target="nav"></ul>
-
-            <div class="groups">
-              <ul data-filters-target="groups"></ul>
-            </div>
-
-            <div class="selected" data-filters-target="selected">
-              <p class="filters-selected--none">No preferences selected</p>
-
-              <div class="d-flex">
-                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-{% endblock %}
-
 {% block content %}
 
-  <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination search" data-episodes-items-value="12" data-episodes-types-value="true" data-episodes-search-value="true" data-episodes-filters-value="true">
-
+  <div id="episodes" data-action="episodes:paginate->pagination#update episodes:heading->heading#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination search" data-episodes-items-value="12" data-episodes-search-value="true" data-episodes-filters-value="true">
     <div class="container-fluid">
-      <div class="row header" data-episodes-target="heading">
+
+      <div class="row header">
         <div class="col-12 col-md-9">
-          {% include "templates/episodes/_title.njk" %}
-          {# <button data-action="click->episodes#clearSearch click->search#clear" class="d-none">clear</button> #}
+          {% include "partials/list/_heading.njk" %}
         </div>
         <div class="col-12 col-md-3 mb-3 mb-md-0">
-          <form class="input-group input-group-sm" id="search" role="search" data-action="submit->search#request">
-            <input type="text" class="form-control" placeholder="search all shows" aria-label="search shows" aria-describedby="button-addon2" data-search-target="query"></input>
-            <button class="btn btn-secondary" type="button" id="button-addon2" data-action="click->search#request">Go</button>
-          </form>
+          {% include "partials/list/_search.njk" %}
         </div>
       </div>
+      {% include "partials/list/_pagination.njk" %}
 
-      <div class="pagination d-flex flex-wrap flex-md-nowrap">
-        <div data-pagination-target="stats" class="flex-grow-1"></div>
-        <div data-pagination-target="control" data-action="click->pagination#paginate"></div>
-      </div>
-      
       <div class="row episodes" data-episodes-target="items"></div>
     </div>
   </div>
