--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -1,38 +1,5 @@
 {% extends "layout.njk" %}
 
-{% block header %}
-
-  {% include "partials/filters/_tag.njk" %}
-
-  <div class="container-fluid content-header" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
-
-    <div class="collapse" id="filter-controls" data-filters-target="panel">
-      <div class="filters">
-        <div class="d-md-flex flex-row">
-          <div class="filters-header">
-
-            <ul class="nav nav-fill" data-filters-target="nav"></ul>
-
-            <div class="groups">
-              <ul data-filters-target="groups"></ul>
-            </div>
-
-            <div class="selected" data-filters-target="selected">
-              <p class="filters-selected--none">No preferences selected</p>
-
-              <div class="d-flex">
-                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-{% endblock %}
-
 {% block content %}
 
   <div class="container-fluid">
@@ -53,8 +20,8 @@
             <div class="row pt-0">
               <div data-controller="status">
                 <h4 class="mb-1">Streaming Next</h4>
-                <p data-status-target="track" class="mb-0">next</p>
-                <a href="#upcoming-shows" class="nav-link py-2 py-md-0">New Shows Coming Soon</a>
+                <p data-status-target="track" class="mb-2">next</p>
+                <a href="#upcoming-shows" class="nav-link py-2 py-md-0">Streaming Soon</a>
               </div>
               {# <div class="col col-md-6">
                 <a href="#upcoming-shows" class="nav-link py-2 py-md-0" style="color:#1c1c1c;">Coming Soon</a>
@@ -136,9 +103,9 @@
 
     <div class="row">
       <div class="col-12 mb-2">
-        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-offset-value="0" data-episodes-search-value="true">
-          <div class="heading d-flex" data-episodes-target="heading">
-            {% include "templates/episodes/_title.njk" %}
+        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes heading" data-action="episodes:heading->heading#update" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-offset-value="0" data-episodes-search-value="true">
+          <div class="heading d-flex">
+            {% include "partials/list/_heading.njk" %}
           </div>
 
           <p class="mb-0">Click show to load in player</p>
