--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -1,4 +1,4 @@
-<header data-controller="filters" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag"  data-filters-target-value="episodes">
+<header data-controller="filters" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
@@ -37,10 +37,9 @@
           </li>
         </div>
       </div>
-
     </nav>
 
-    {% include "partials/filters/_tag.njk" %}
+    {% include "templates/filters/_tag.njk" %}
     <div class="container-fluid content-header">
 
       <div class="collapse multi-collapse" id="filter-controls" data-filters-target="panel">
@@ -50,7 +49,7 @@
 
               <ul class="nav nav-fill" data-filters-target="nav"></ul>
 
-              <div class="groups">
+              <div class="groups mt-3">
                 <ul data-filters-target="groups"></ul>
               </div>
 
@@ -68,12 +67,10 @@
 
     </div>
 
-  </header>
+</header>
 
-  <div class="collapse multi-collapse collapse-spacer">&nbsp;</div>
+<div class="collapse multi-collapse collapse-spacer">&nbsp;</div>
 
-  <div class="main-content">
-
-    {% block content %}{% endblock %}
-
-  </div>
+<div class="main-content">
+  {% block content %}{% endblock %}
+</div>
