--- a/src/views/partials/episode/_latest.njk
+++ b/src/views/partials/episode/_latest.njk
@@ -25,18 +25,14 @@
           <a data-controller="navigation" data-action="click->navigation#navigate" href="/episode/{{ item.slug }}" class="nav-link mb-1 fs-3">{{ showData(item.name).detail }}</a>
         </h5>
 
-        <h5 class="card-title">
+        <h5 class="card-title mb-2">
           {{showData(item.name).host}}
-
         </h5>
 
         <p class="card-text mb-1">
           <a data-controller="navigation" data-action="click->navigation#navigate" href="/show/{{ showTitleId(title | trim) }}" class="nav-link fs-6">{{ showData(item.name).title }}</a>
         </p>
 
-        <p class="card-text">
-          <a data-controller="navigation" data-action="click->navigation#navigate" href="#" class="nav-link" style="color:#1c1c1c">More detail</a>
-        </p>
       {% else %}
         <h5 class="card-title">{{ title }}</h5>
         <p class="card-text">{{item.user.name}}</p>
