--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -40,7 +40,7 @@
     </nav>
 
     {% include "templates/filters/_tag.njk" %}
-    <div class="container-fluid content-header">
+    <div class="container-fluid header__dropdown">
 
       <div class="collapse multi-collapse" id="filter-controls" data-filters-target="panel">
         <div class="filters">
