--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,35 +1,41 @@
-$font-family-base: "Urbanist";
+@import './branding';
+
+$font-family-base: $brand-font-secondary;
 $grid-gutter-width: 1rem;
-$headings-font-family: "Bebas Neue";
+$headings-font-family: $brand-font-primary;
 $font-size-base: 1rem;
 $lead-font-size: $font-size-base * 3;
-$badge-color: #25292c;
+$badge-color: $brand-color-dark;
 $card-bg: transparent;
 $card-border-color: none;
 $card-border-radius: 0;
 $grid-gutter-width: 4rem;
-$headings-color: #1c1c1c;
-$navbar-dark-color: #e0e1e1;
+$headings-color: $brand-color-dark;
+$navbar-dark-color: $brand-color-light;
 $nav-link-font-size: 1.1rem;
-$nav-link-color: #e0e1e1;
-$navbar-dark-active-color: #E85C41;
+$nav-link-color: $brand-color-light;
+$navbar-dark-active-color: $brand-color-primary;
 $transition-collapse: height .1s ease;
-$carousel-control-color: #1c1c1c;
-$carousel-indicator-active-bg: #1c1c1c;
+$carousel-control-color: $brand-color-dark;
+$carousel-indicator-active-bg: $brand-color-dark;
 $list-group-item-padding-x: 0.6rem;
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
+@import './filters';
+@import './episode';
+@import './post';
+@import './pagination';
 @import './social-toolbar';
+@import './stream';
 
 html,
 body {
-  color: #1c1c1c;
-  background-color: #f1f1f1;
+  color: $brand-color-dark;
+  background-color: $brand-color-white;
 }
 
 h1 {
   @include font-size(2.4rem);
-  color: #1c1c1c;
 }
 
 h2 {
@@ -39,11 +45,9 @@ h2 {
 
 h3 {
   @include font-size(2.4rem);
-  color: #1c1c1c;
 
   span {
     @include font-size(1.4rem);
-    color: #1c1c1c;
   }
 }
 
@@ -52,33 +56,14 @@ hr {
 }
 
 .lead {
-  font-family: 'Bebas Neue', sans-serif;
-  color: #E8D7B9;
+  font-family: $brand-font-primary, sans-serif;
+  color: $brand-color-secondary;
   font-size: 2.8rem;
 }
 
-.radioco_status {
-  display: none;
-}
-
-.content-header {
-  background-color: #4A5359;
-  width: 100%;
-  z-index: 500;
-
-  .live {
-    position: relative;
-    padding-right: 30px;
-  }
-
-  h5 {
-    color: #f1f1f1;
-  }
-}
-
 header {
-  background-color: #4A5359;
-  color: #e0e1e1;
+  background-color: $brand-color-dark;
+  color: $brand-color-medium;
   position: fixed;
   width: 100%;
   z-index: 1000;
@@ -86,7 +71,7 @@ header {
   height: 5rem;
 
   h2 {
-    color: #e0e1e1;
+    color: $brand-color-medium;
     line-height: 3.5rem;
   }
 
@@ -98,34 +83,18 @@ header {
     position: relative;
   }
 
-  .highlight {
-    &::after {
-      content: ' ';
-      background-color: #E85C41;
-      width: 8px;
-      height: 8px;
-      display: inline-block;
-      position: absolute;
-      bottom: 4px;
-      right: 8px;
-      border-radius: 50%;
-    }
-  }
-
-  .sub-menu {
-    .toggle-link {
-      margin-right: 1rem;
-      padding-right: 1rem;
-      border-right: 1px solid #f1f1f1;
-    }
+  .header__dropdown {
+    background-color: $brand-color-dark;
+    width: 100%;
+    z-index: 500;
   }
 }
 
 .navbar {
-  background-color: #253434;
+  background-color: $brand-color-medium;
   opacity: 1;
   background-size: 10px 10px;
-  background-image: repeating-linear-gradient(45deg, #4A5359 0, #4A5359 1px, #25292c 0, #25292c 50%);
+  background-image: repeating-linear-gradient(45deg, #4A5359 0, #4A5359 1px, $brand-color-dark 0, $brand-color-dark 50%);
 
   padding: 0;
 
@@ -158,63 +127,31 @@ header {
     &__orange {
       background: url('/images/brand/patterns_01_tile.png') repeat;
 
+      h1 {
+        color:$brand-color-secondary;
+      }
+
       h3 {
-        color: #E8D7B9;
+        color: $brand-color-secondary;
         @include font-size(2rem);
       }
 
       .content {
-        background-color: #f2f2f2;
-        min-height: 240px;
+        background-color: $brand-color-white;
         padding: 1rem;
+        padding:20px;
       }
     }
   }
 }
 
-.episode {
-  .image-container {
-    position: relative;
-    display: inline-block;
-    border: 6px solid #e0e1e1;
-
-    .statistics {
-      background-color: #e0e1e1;
-      font-size: 0.9rem;
-
-      .count {
-        padding-left: 1.3rem;
-        background-position: left;
-        background-repeat: no-repeat;
-      }
-
-      .likes {
-        background-image: url(/images/icons/heart.svg);
-      }
-
-      .reposts {
-        background-image: url(/images/icons/repost.svg);
-      }
+.list {
+  &__heading {
+    .reset {
+      border:none;
+      text-decoration: underline;
+      color: $brand-color-dark;
     }
-  }
-
-  p {
-    padding: 0;
-    margin: 0;
-  }
-
-  pre {
-    font-family: 'Urbanist', sans-serif;
-    text-wrap: wrap;
-  }
-
-  .card-body {
-    padding: 1rem 0;
-    width: 100%;
-  }
-
-  .nav-link {
-    color: #1c1c1c;
   }
 }
 
@@ -223,143 +160,17 @@ header {
   padding: 0;
 
   li {
+    cursor: pointer;
     display: inline;
     text-transform: capitalize;
 
     button {
       border: none;
-      background-color: #e0e1e1;
+      background-color: $brand-color-light;
 
       &:hover {
         text-decoration: underline;
       }
-    }
-  }
-}
-
-.stream {
-  position: relative;
-
-  p {
-    padding-left: 42px;
-    cursor: pointer;
-  }
-
-  .playable {
-    &-button {
-      left: 0;
-      top: -7px;
-    }
-  }
-}
-
-.toggle-panel {
-  background-color: #4A5359;
-
-  h5 {
-    color: #ddd;
-
-  }
-
-  .highlight {
-    color: white;
-  }
-}
-
-.filters {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 0;
-
-    li {
-      display: inline;
-    }
-  }
-
-  .tag {
-    position: relative;
-
-    span {
-      position: absolute;
-      top: 0;
-      left: -2px;
-      line-height: 0;
-
-      display: none;
-      color: #fff;
-    }
-  }
-
-  &-selected--none {
-    padding: 0;
-  }
-
-  &-selected-status {
-    font-size: 0.9rem;
-  }
-
-  &-selected--clear {
-    background-color: transparent;
-    color: #fff;
-    border: 0;
-    padding: 0 1rem;
-    height: max-content;
-    font-size: 0.8rem;
-  }
-
-  &-header {
-    background-color: #4A5359;
-
-    .nav-link {
-      text-transform: capitalize;
-      cursor: pointer;
-
-      &:hover:not(.active) {
-        background-color: #ddd;
-      }
-    }
-
-    .active {
-      background-color: #aaa;
-      color: #fff;
-    }
-  }
-
-  &-type {
-    color: #E0E1E1;
-
-    .nav-link {
-      text-transform: capitalize;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #4A5359;
-        color: #fff;
-      }
-    }
-
-    .active {
-      background-color: #aaa;
-      color: #fff;
-    }
-  }
-
-  .selected {
-    &:hover {
-      span {
-        display: block;
-      }
-    }
-
-    button {
-      background-color: #E85C41;
-      color: #1c1c1c;
-      border: none;
-      text-transform: capitalize;
     }
   }
 }
@@ -370,121 +181,6 @@ header {
   bottom: -20px;
   right: 0;
   width: 100%;
-}
-
-.playable {
-  &-button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    align-self: center;
-
-    span {
-      width: 40px;
-      height: 40px;
-      background-color: #4A5359;
-      display: inline-block;
-      border-radius: 50%;
-      border: 2px solid white;
-      position: relative;
-    }
-
-    button {
-      top: 8px;
-      position: absolute;
-      left: 12px;
-      background-color: transparent;
-      border-style: solid;
-      border-width: 9px 0px 9px 16px;
-      border-color: transparent transparent transparent rgba(255, 255, 255, 1);
-      box-sizing: border-box;
-    }
-
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-  }
-
-  &:hover {
-    cursor: pointer;
-
-    button {
-      border-color: transparent transparent transparent #E85C41;
-    }
-  }
-}
-
-.blog-post {
-  figure img {
-    width: 200px;
-    height: 200px;
-    float: left;
-    margin-right: 1em;
-  }
-
-  h3 {
-    margin-bottom: 1rem;
-    text-transform: capitalize;
-  }
-
-  blockquote {
-    margin: 1rem 0;
-    font-style: italic;
-
-    &::before,
-    &::after {
-      content: "\"";
-    }
-  }
-
-  p,
-  figure {
-    margin-bottom: 0.5rem;
-  }
-
-  figure {
-    font-size: 1.2rem;
-
-    figcaption {
-      font-family: 'Bebas Neue', sans-serif;
-
-      font-size: 2rem;
-    }
-
-    @media only screen and (max-width: 990px) {
-      figcaption {
-        clear: both;
-        padding-top: 1rem;
-      }
-    }
-  }
-
-  a {
-    color: #253434;
-  }
-}
-
-.pagination {
-  p {
-    padding-right: 5px;
-  }
-
-  ul {
-    padding: 0;
-    list-style-type: none;
-
-    li {
-      padding: 0 2px;
-      display: inline;
-      text-transform: uppercase;
-
-      .current {
-        background-color: #ccc;
-      }
-    }
-  }
 }
 
 .toggle-link {
@@ -501,8 +197,7 @@ header {
     height: 0;
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
-
-    border-top: 7px solid #e0e1e1;
+    border-top: 7px solid $brand-color-medium;
     margin: auto;
   }
 }
@@ -516,7 +211,6 @@ header {
     height: 0;
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
-
-    border-bottom: 7px solid #e0e1e1;
+    border-bottom: 7px solid $brand-color-medium;
   }
 }
