--- a/src/views/browse.njk
+++ b/src/views/browse.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div id="episodes" data-action="episodes:paginate->pagination#update episodes:heading->heading#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination search" data-episodes-items-value="12" data-episodes-search-value="true" data-episodes-filters-value="true">
+  <div id="episodes" class="list" data-action="episodes:paginate->pagination#update episodes:heading->heading#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination search" data-episodes-items-value="12" data-episodes-search-value="true" data-episodes-filters-value="true">
     <div class="container-fluid">
 
       <div class="row header">
