--- a/src/views/partials/list/_heading.njk
+++ b/src/views/partials/list/_heading.njk
@@ -1,11 +1,11 @@
-<div class="row pt-0 pb-2">
+<div class="list__heading row pt-0 pb-2">
   <div class="col-12">
     <h3 class="mb-0" data-heading-target="title"></h3>
   </div>
   <div class="col-12">
     <span class="d-none" data-heading-target="preferences">
       (Preferences Applied)
-      <button data-heading-target="reset" data-action="click->episodes#clearFilters" style="border:none; text-decoration: underline;color:#717171">reset</button>
+      <button class="reset" data-heading-target="reset" data-action="click->episodes#clearFilters">reset</button>
     </span>
   </div>
 </div>
