--- a/src/views/partials/post/_default.njk
+++ b/src/views/partials/post/_default.njk
@@ -1,7 +1,7 @@
 <div data-count="{{ data.posts.count }}" data-posts-target="count"></div>
 
 {% for item in data.posts.items | reverse %}
-  <div class="col-12 card blog-post mb-4">
+  <div class="col-12 card post mb-4">
     <div class="card-body p-0">
       {# <h2 class="card-title" data-blog-target="title"></h2> #}
 
