--- a/src/views/page/browse.njk
+++ b/src/views/page/browse.njk
@@ -7,13 +7,13 @@
 
       <div class="row header">
         <div class="col-12 col-md-9">
-          {% include "partials/list/_heading.njk" %}
+          {% include "partial/list/_heading.njk" %}
         </div>
         <div class="col-12 col-md-3 mb-3 mb-md-0">
-          {% include "partials/list/_search.njk" %}
+          {% include "partial/list/_search.njk" %}
         </div>
       </div>
-      {% include "partials/list/_pagination.njk" %}
+      {% include "partial/list/_pagination.njk" %}
 
       <div class="row episodes" data-episodes-target="items"></div>
     </div>
