--- a/src/views/page/shows.njk
+++ b/src/views/page/shows.njk
@@ -33,7 +33,7 @@
             {% endif %}
 
             <div class="social-toolbar">
-              {% include "partials/_social-toolbar.njk" %}
+              {% include "partial/_social-toolbar.njk" %}
             </div>
 
           </div>
