--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -1,4 +1,4 @@
-<header data-controller="filters" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
+<header class="main-header" data-controller="filters" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
@@ -33,40 +33,38 @@
           <span class="filters-selected-status" data-filters-target="status"></span>
               <span class="toggle-link__icon"></span>
             </a>
-
           </li>
-        </div>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    {% include "templates/filters/_tag.njk" %}
-    <div class="container-fluid header__dropdown">
+  {% include "template/filters/_tag.njk" %}
+  <div class="container-fluid header__dropdown">
 
-      <div class="collapse multi-collapse" id="filter-controls" data-filters-target="panel">
-        <div class="filters">
-          <div class="d-md-flex flex-row">
-            <div class="filters-header">
+    <div class="collapse multi-collapse" id="filter-controls" data-filters-target="panel">
+      <div class="filters">
+        <div class="d-md-flex flex-row">
+          <div class="filters-header">
 
-              <ul class="nav nav-fill" data-filters-target="nav"></ul>
+            <ul class="nav nav-fill" data-filters-target="nav"></ul>
 
-              <div class="groups mt-3">
-                <ul data-filters-target="groups"></ul>
-              </div>
-
-              {# <div class="selected" data-filters-target="selected">
-                <p class="filters-selected--none">No preferences selected</p>
-
-                <div class="d-flex">
-                  <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-                </div>
-              </div> #}
+            <div class="groups mt-3">
+              <ul data-filters-target="groups"></ul>
             </div>
+
+            {# <div class="selected" data-filters-target="selected">
+              <p class="filters-selected--none">No preferences selected</p>
+
+              <div class="d-flex">
+                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
+              </div>
+            </div> #}
           </div>
         </div>
       </div>
-
     </div>
-
+  </div>
 </header>
 
 <div class="collapse multi-collapse collapse-spacer">&nbsp;</div>
