--- a/src/views/partial/_social-toolbar.njk
+++ b/src/views/partial/_social-toolbar.njk
@@ -2,7 +2,7 @@
   {% for social in item.social.channels %}
   <li class="list-group-item">
     <a href="{{ social.link }}" target="_blank">
-      {% include "partials/social/" + (social.channel) + ".njk" ignore missing %}
+      {% include "partial/social/" + (social.channel) + ".njk" ignore missing %}
     </a>
   </li>
   {% endfor %}
