--- a/src/css/toggle.scss
+++ b/src/css/toggle.scss
@@ -1,18 +1,19 @@
 .toggle-link {
   position: relative;
-  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  color: $brand-color-light !important;
 }
 
 .toggle-link[aria-expanded='false'] {
   .toggle-link__icon {
     position: absolute;
-    left: 0;
-    top: 30%;
+    right: 0;
+    top: 40%;
     width: 0;
     height: 0;
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
-    border-top: 7px solid $brand-color-medium;
+    border-top: 7px solid $brand-color-light;
     margin: auto;
   }
 }
@@ -20,12 +21,12 @@
 .toggle-link[aria-expanded='true'] {
   .toggle-link__icon {
     position: absolute;
-    left: 0;
-    top: 30%;
+    right: 0;
+    top: 40%;
     width: 0;
     height: 0;
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
-    border-bottom: 7px solid $brand-color-medium;
+    border-bottom: 7px solid $brand-color-light;
   }
 }
