--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -1,15 +1,21 @@
-<header class="main-header" data-controller="filters" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
+<header class="main-header" data-controller="header filters" data-action="scroll@window->header#scroll" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        <img src="/images/brand/Logo_White2.png" height="55" width="55"/>
+        <img src="/images/brand/logo_white.png" height="55" width="55"/>
       </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-controls="navbarnavdropdown" aria-expanded="false" aria-label="toggle navigation" data-filters-target="indicator">
+      <a class="nav-link toggle-link order-md-2 ps-2" data-bs-toggle="collapse" data-bs-target=".multi-collapse" href="#filter-controls" role="button" aria-expanded="false" aria-controls="filter-controls">
+        Preferences
+        <span class="filters-selected-status" data-filters-target="status"></span>
+        <span class="toggle-link__icon"></span>
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarnavdropdown" aria-controls="navbarnavdropdown" aria-expanded="false" aria-label="toggle navigation" data-filters-target="indicator">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse multi-collapse" id="navbarnavdropdown">
+      <div class="collapse navbar-collapse pt-3 pt-md-0" id="navbarnavdropdown">
         <ul class="navbar-nav justify-content-end flex-grow-1">
           <li class="nav-item">
             <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link {% if page === "home" %}active{% endif %}" aria-current="page" href="/home">Home</a>
@@ -26,14 +32,6 @@
           <li class="nav-item">
             <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link {% if page === "about" %}active{% endif %}" href="/about">About</a>
           </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" data-bs-target=".multi-collapse" href="#filter-controls" role="button" aria-expanded="false" aria-controls="collapseexample">
-            Preferences
-          <span class="filters-selected-status" data-filters-target="status"></span>
-              <span class="toggle-link__icon"></span>
-            </a>
-          </li>
         </ul>
       </div>
     </div>
@@ -42,7 +40,7 @@
   {% include "template/filters/_tag.njk" %}
   <div class="container-fluid header__dropdown">
 
-    <div class="collapse multi-collapse" id="filter-controls" data-filters-target="panel">
+    <div class="collapse multi-collapse scroll-collapse" id="filter-controls" data-filters-target="panel">
       <div class="filters">
         <div class="d-md-flex flex-row">
           <div class="filters-header">
@@ -66,8 +64,6 @@
     </div>
   </div>
 </header>
-
-<div class="collapse multi-collapse collapse-spacer">&nbsp;</div>
 
 <div class="main-content">
   {% block content %}{% endblock %}
