--- a/src/views/partial/episode/_carousel.njk
+++ b/src/views/partial/episode/_carousel.njk
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="playable episode mb-3 carousel-item{% if loop.first %} active{% endif %}" data-bs-interval="4000" data-url="https://www.mixcloud.com/widget/iframe/?hide_cover=1&autoplay=1&feed={{ item.key }}">
   <div class="row g-0 p-0">
-    <div class="col-12 col-sm-5 content">
+    <div class="col-12 col-sm-6 content">
       <div class="image-container w-100" data-action="click->radio#play">
         <img src="{{ item.pictures.large }}" alt="{{ item.name }}" class="w-100" />
 
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-sm-7 content">
+    <div class="col-12 col-sm-6 py-0 py-sm-4 px-sm-0 content">
       
       {% set title = showData(item.name).title %}
       {% if item.user.username === 'patternradio' %}
@@ -37,7 +37,7 @@
         </p>
 
       {% else %}
-        <h5 class="card-title">{{ title }}</h5>
+        <h5 class="card-title fs-3">{{ title }}</h5>
         <p class="card-text">{{item.user.name}}</p>
       {% endif %}
 
